--- a/MVC_EF_Start/appsettings.Development.json
+++ b/MVC_EF_Start/appsettings.Development.json
@@ -6,5 +6,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "IEXTrading": {
+      "ConnectionString": "Data Source=./SQLITEDB.sqlite;"
+    }
   }
 }
